# cxpui

./: .gitignore  AppDelegate.h  AppDelegate.m  AppDelegate.swift  CMakeLists.txt  c_error_handling.txt  concept.md  copy_to_appkit.sh  copy_to_win11.sh  core.h  cxpui.c  cxpui.h  graph.c  graph.h  gtk.c  gtk4.c  gtk4_backend_new.c  main.c  view_list.c  view_list.h
errors/: CMakeLists.txt  c_error_handling.md  error.c  error.h
generator/: generate.js  generatelist.js  package.json
sdl3/: main.c
uikit/cxpui-uikit/cxpui-uikit/: AppDelegate.swift  bridging.h  core.c  cxpui.c  cxpui.h  main.c  view_list.c  view_list.h
uikit/cxpui-uikit/cxpui-uikit.xcodeproj/: project.pbxproj
uikit/cxpui-uikit/cxpui-uikit.xcodeproj/project.xcworkspace/xcuserdata/seb.xcuserdatad/: UserInterfaceState.xcuserstate
uikit/cxpui-uikit/cxpui-uikit.xcodeproj/xcshareddata/xcschemes/: cxpui-uikit.xcscheme
uikit/cxpui-uikit/cxpui-uikit.xcodeproj/xcuserdata/seb.xcuserdatad/xcschemes/: cxpui-uikit without debugger.xcscheme  xcschememanagement.plist
uikit/cxpui-uikit/cxpui-uikit/Base.lproj/: MainMenu.xib
uikit/cxpui-uikit/cxpui-uikit/errors/: error.c  error.h
vibe/: CMakeLists.txt
vibe/doc/: example.c  example.tiny  plan.md
vibe/generator/parser/: tokenizer.py
vibe/src/: main.c
win32/: first_attempt.c  main.c  win32_backend.c  win32_backend_new.c
